<resources>
    <string name="app_name">QR Scan</string>

    <string name="menu_torch">Torch</string>
    <string name="menu_sound">Sound</string>
    <string name="menu_vibration">Vibration</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_more">Menu</string>
    <string name="menu_camera">Switch camera</string>
    <string name="menu_scanner">Scanner On/Off</string>

    <string name="dialog_clear">Clear scan result?</string>
    <string name="toast_front_camera">Front camera activation</string>
    <string name="toast_back_camera">Back camera activation</string>
    <string name="toast_torch_on">Torch is burning.</string>
    <string name="toast_torch_off">Torch is extinguished.</string>
    <string name="toast_sound_on">Sounds are heard.</string>
    <string name="toast_sound_off">Sounds are silent.</string>
    <string name="toast_vibration_on">Vibration is on.</string>
    <string name="toast_vibration_off">Vibration is off.</string>
    <string name="toast_torch_not_available">Torch feature not available</string>

    <string name="barcode_web_behavior">Web address behavior</string>
    <string name="barcode_types">Barcode types</string>

    <string name="scanner_index_text">Use the camera\nto scan the QR code.</string>

</resources>