<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/menu_more"
        android:icon="@drawable/menu"
        app:showAsAction="always"
        android:orderInCategory="1">

        <menu>
            <item
                android:id="@+id/MenuCamera"
                android:title="@string/menu_camera"
                android:icon="@drawable/camera_front" />

            <item
                android:id="@+id/MenuTorch"
                android:title="@string/menu_torch"
                android:icon="@drawable/torch_on" />

            <item
                android:id="@+id/MenuSound"
                android:title="@string/menu_sound"
                android:icon="@drawable/sound_on" />

            <item
                android:id="@+id/MenuVibration"
                android:title="@string/menu_vibration"
                android:icon="@drawable/vibration_on" />

            <item
                android:id="@+id/MenuClear"
                android:title="@string/menu_clear"
                android:icon="@drawable/clear" />
        </menu>
    </item>
</menu>